# scrape-website-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
mcp_server/: __init__.py  auth.py  crawler.py  openai_sync.py  scraper.py  server.py  store.py
mcp_server/tests/: test_concurrency.py  test_crawler.py  test_integration.py  test_openai_sync.py  test_scraper.py  test_store_migration.py
