[project]
name = "scrape-website-mcp"
version = "0.2.0"
description = "Self-hosted MCP server that scrapes URLs into an OpenAI vector store with replace-by-URL semantics. Companion to ventz/scrape-website."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Ventz Petkov" }]
dependencies = [
    "fastmcp>=2.0",
    "openai>=1.50",
    "aiohttp>=3.11",
    "uvicorn[standard]>=0.30",
    # The shared fetch/crawl/extract engine. Extras: headless-Chromium render
    # escalation (render), curl_cffi WAF/403 fallback (waf), PDF/Office ->
    # Markdown (docs). The `human` extra is deliberately NOT installed — the
    # interactive solve flow is workstation-only.
    "scrape-website[render,waf,docs]>=0.5.0",
]

[tool.uv.sources]
# `make setup` clones ventz/scrape-website into vendor/ (pin via
# SCRAPE_WEBSITE_REF) and uv installs it as an editable package —
# `make update-scraper` pulls upstream improvements through.
scrape-website = { path = "vendor/scrape-website", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

# This is an application, not a library — don't try to build it as a wheel.
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["mcp_server/tests"]
markers = [
    "integration: end-to-end tests that need Chromium or the network",
]
